--- a/trunk/database/ui/index.html
+++ b/trunk/database/ui/index.html
@@ -1,35 +1,36 @@
-<hr>
-<p>
-<h1>welcome to protomine!</h1>
-<p>
-<h2><A NAME="thismine" HREF="#thismine">this mine!</a></h2>
+<hr/>
+<p/>
+<h2><A NAME="welcometoprotomine" HREF="#welcometoprotomine">welcome to protomine!</a></h2>
 <UL>
 <LI>
-<b>documentation:</b>
+<em>documentation:</em>
 <A HREF="../doc/">[local]</A>
 </LI>
 <LI>
-<b>objects:</b>
+<em>objects:</em>
 <A HREF="show-objects.html">[show objects]</A>
 <A HREF="create-object.html">[create object]</A>
 </LI>
 <LI>
-<b>relationships:</b>
+<em>relationships:</em>
 <A HREF="show-relations.html">[show relationships]</A>
 <A HREF="create-relation.html">[create relationships]</A>
 </LI>
 <LI>
-<b>tags:</b>
+<em>tags:</em>
 <A HREF="show-tags.html">[show tags]</A>
 <A HREF="create-tag.html">[create tag]</A>
 </LI>
 <LI>
-<b>management:</b>
+<em>management:</em>
 <A HREF="version.html">[version information]</A>
 <A HREF="show-config.html">[show configuration]</A>
 <A HREF="update-config.html">[update configuration]</A>
 </LI>
 </UL>
+<p/>
+<hr/>
+<p/>
 <h2><A NAME="themineproject" HREF="#themineproject">the mine! project</a></h2>
 <UL>
 <LI><A HREF="http://themineproject.org/index.php/about/">about</A></LI>
@@ -39,87 +40,20 @@
 </UL>
 <h2><A NAME="protominesoftware" HREF="#protominesoftware">protomine! software</a></h2>
 <UL>
-<LI><A HREF="http://themineproject.org/index.php/feed/">rss feed (announcements)</A></LI>
-<LI><A HREF="http://themineproject.org/index.php/download/">downloads</A></LI>
+<LI><A HREF="http://code.google.com/p/protomine/">google code home page</A></LI>
+<LI><A HREF="http://code.google.com/p/protomine/w/list">documentation wiki</A></LI>
+<LI><A HREF="http://code.google.com/p/protomine/updates/list">updates and history</A></LI>
+<LI><A HREF="http://code.google.com/p/protomine/issues/list">bugs and bug reporting</A></LI>
+<LI><A HREF="http://code.google.com/p/protomine/source/checkout">subversion code download</A></LI>
 </UL>
 <h2><A NAME="protomineauthors" HREF="#protomineauthors">protomine! authors</a></h2>
 <UL>
 <LI><A HREF="http://www.mediainfluencer.net/">adriana lukas, mine! inventor</A></LI>
 <LI><A HREF="http://www.crypticide.com/dropsafe/">alec muffett, programmer / geek</A></LI>
 </UL>
-<h2><A NAME="hackingtest" HREF="#hackingtest">hacking, test</a></h2>
-<UL>
-<LI><A HREF="../test">../test</A></LI>
-</UL>
-<h2><A NAME="hackingfeeds" HREF="#hackingfeeds">hacking, feeds</a></h2>
-<UL>
-<LI><A HREF="../feed/COOKIE">../feed/COOKIE</A></LI>
-</UL>
-<h2><A NAME="hackingapi" HREF="#hackingapi">hacking, api</a></h2>
-<UL>
-<LI><A HREF="../api/config.xml">../api/config.xml</A></LI>
-<LI><A HREF="../api/config.xml?_method=PUT">../api/config.xml?_method=PUT</A></LI>
-<LI><A HREF="../api/object.xml">../api/object.xml</A></LI>
-<LI><A HREF="../api/object.xml?_method=POST">../api/object.xml?_method=POST</A></LI>
-<LI><A HREF="../api/object/3">../api/object/3</A></LI>
-<LI><A HREF="../api/object/3.xml">../api/object/3.xml</A></LI>
-<LI><A HREF="../api/object/3.xml?_method=DELETE">../api/object/3.xml?_method=DELETE</A></LI>
-<LI><A HREF="../api/object/3.xml?_method=PUT">../api/object/3.xml?_method=PUT</A></LI>
-<LI><A HREF="../api/object/3/clone.xml">../api/object/3/clone.xml</A></LI>
-<LI><A HREF="../api/object/3/clone.xml?_method=POST">../api/object/3/clone.xml?_method=POST</A></LI>
-<LI><A HREF="../api/object/3?_method=PUT">../api/object/3?_method=PUT</A></LI>
-<LI><A HREF="../api/relation.xml">../api/relation.xml</A></LI>
-<LI><A HREF="../api/relation.xml?_method=POST">../api/relation.xml?_method=POST</A></LI>
-<LI><A HREF="../api/relation/2.xml">../api/relation/2.xml</A></LI>
-<LI><A HREF="../api/relation/2.xml?_method=DELETE">../api/relation/2.xml?_method=DELETE</A></LI>
-<LI><A HREF="../api/relation/2.xml?_method=PUT">../api/relation/2.xml?_method=PUT</A></LI>
-<LI><A HREF="../api/select/object.xml">../api/select/object.xml</A></LI>
-<LI><A HREF="../api/select/relation.xml">../api/select/relation.xml</A></LI>
-<LI><A HREF="../api/select/tag.xml">../api/select/tag.xml</A></LI>
-<LI><A HREF="../api/share/raw/2/1/3.xml">../api/share/raw/2/1/3.xml</A></LI>
-<LI><A HREF="../api/share/redirect/2.xml">../api/share/redirect/2.xml</A></LI>
-<LI><A HREF="../api/share/redirect/2/3.xml">../api/share/redirect/2/3.xml</A></LI>
-<LI><A HREF="../api/share/url/2.xml">../api/share/url/2.xml</A></LI>
-<LI><A HREF="../api/share/url/2/3.xml">../api/share/url/2/3.xml</A></LI>
-<LI><A HREF="../api/tag.xml">../api/tag.xml</A></LI>
-<LI><A HREF="../api/tag.xml?_method=POST">../api/tag.xml?_method=POST</A></LI>
-<LI><A HREF="../api/tag/4.xml">../api/tag/4.xml</A></LI>
-<LI><A HREF="../api/tag/4.xml?_method=DELETE">../api/tag/4.xml?_method=DELETE</A></LI>
-<LI><A HREF="../api/tag/4.xml?_method=PUT">../api/tag/4.xml?_method=PUT</A></LI>
-<LI><A HREF="../api/version.xml">../api/version.xml</A></LI>
-</UL>
-<h2><A NAME="hackingui" HREF="#hackingui">hacking, ui</a></h2>
-<UL>
-<LI><A HREF="../ui/clone-object/3.html">../ui/clone-object/3.html</A></LI>
-<LI><A HREF="../ui/create-object.html?_method=POST">../ui/create-object.html?_method=POST</A></LI>
-<LI><A HREF="../ui/create-relation.html?_method=POST">../ui/create-relation.html?_method=POST</A></LI>
-<LI><A HREF="../ui/create-tag.html?_method=POST">../ui/create-tag.html?_method=POST</A></LI>
-<LI><A HREF="../ui/delete-object/3.html">../ui/delete-object/3.html</A></LI>
-<LI><A HREF="../ui/delete-relation/2.html">../ui/delete-relation/2.html</A></LI>
-<LI><A HREF="../ui/delete-tag/4.html">../ui/delete-tag/4.html</A></LI>
-<LI><A HREF="../ui/read-data/3">../ui/read-data/3</A></LI>
-<LI><A HREF="../ui/read-object/3.html">../ui/read-object/3.html</A></LI>
-<LI><A HREF="../ui/read-relation/2.html">../ui/read-relation/2.html</A></LI>
-<LI><A HREF="../ui/read-tag/4.html">../ui/read-tag/4.html</A></LI>
-<LI><A HREF="../ui/select/object.html">../ui/select/object.html</A></LI>
-<LI><A HREF="../ui/select/relation.html">../ui/select/relation.html</A></LI>
-<LI><A HREF="../ui/select/tag.html">../ui/select/tag.html</A></LI>
-<LI><A HREF="../ui/share/raw/2/1/3">../ui/share/raw/2/1/3</A></LI>
-<LI><A HREF="../ui/share/redirect/2">../ui/share/redirect/2</A></LI>
-<LI><A HREF="../ui/share/redirect/2/3">../ui/share/redirect/2/3</A></LI>
-<LI><A HREF="../ui/share/url/2.html">../ui/share/url/2.html</A></LI>
-<LI><A HREF="../ui/share/url/2/3.html">../ui/share/url/2/3.html</A></LI>
-<LI><A HREF="../ui/show-clones/3.html">../ui/show-clones/3.html</A></LI>
-<LI><A HREF="../ui/show-config.html">../ui/show-config.html</A></LI>
-<LI><A HREF="../ui/show-objects.html">../ui/show-objects.html</A></LI>
-<LI><A HREF="../ui/show-relations.html">../ui/show-relations.html</A></LI>
-<LI><A HREF="../ui/show-tags.html">../ui/show-tags.html</A></LI>
-<LI><A HREF="../ui/update-config.html?_method=POST">../ui/update-config.html?_method=POST</A></LI>
-<LI><A HREF="../ui/update-data/3.html?_method=POST">../ui/update-data/3.html?_method=POST</A></LI>
-<LI><A HREF="../ui/update-object/3.html?_method=POST">../ui/update-object/3.html?_method=POST</A></LI>
-<LI><A HREF="../ui/update-relation/2.html?_method=POST">../ui/update-relation/2.html?_method=POST</A></LI>
-<LI><A HREF="../ui/update-tag/4.html?_method=POST">../ui/update-tag/4.html?_method=POST</A></LI>
-<LI><A HREF="../ui/version.html">../ui/version.html</A></LI>
-</UL>
-<p>
-<hr>
+<p/>
+<hr/>
+<p/>
+&copy; 2008-2009 Adriana Lukas &amp; Alec Muffett;
+protomine is open source software distributed under the Apache 2.0 license,
+please see the <A HREF="http://code.google.com/p/protomine/w/list">project home page</A> for details
