--- a/trunk/database/ui/index.html
+++ b/trunk/database/ui/index.html
@@ -8,22 +8,22 @@
 </LI>
 <LI>
 <em>objects:</em>
-<A HREF="show-objects.html">[show objects]</A>
+<A HREF="list-objects.html">[list objects]</A>
 <A HREF="create-object.html">[create object]</A>
 </LI>
 <LI>
 <em>relationships:</em>
-<A HREF="show-relations.html">[show relationships]</A>
+<A HREF="list-relations.html">[list relationships]</A>
 <A HREF="create-relation.html">[create relationships]</A>
 </LI>
 <LI>
 <em>tags:</em>
-<A HREF="show-tags.html">[show tags]</A>
+<A HREF="list-tags.html">[list tags]</A>
 <A HREF="create-tag.html">[create tag]</A>
 </LI>
 <LI>
 <em>management:</em>
-<A HREF="version.html">[version information]</A>
+<A HREF="version.html">[software version information]</A>
 <A HREF="show-config.html">[show configuration]</A>
 <A HREF="update-config.html">[update configuration]</A>
 </LI>
