--- a/trunk/database/ui/tmpl-get-object.html
+++ b/trunk/database/ui/tmpl-get-object.html
@@ -1,15 +1,10 @@
-<HR/>
-<UL>
-<LI>objectId: <TMPL_VAR NAME="objectId"></LI>
-<LI>objectName: <TMPL_VAR NAME="objectName"></LI>
-<LI>objectType: <TMPL_VAR NAME="objectType"></LI>
-<LI>objectStatus: <TMPL_VAR NAME="objectStatus"></LI>
-<LI>objectTags: <TMPL_VAR NAME="objectTags"></LI>
-<P>
-<LI>objectDescription: <TMPL_VAR NAME="objectDescription" ESCAPE='NONE'></LI>
-<P>
-<LI>objectHideAfter: <TMPL_VAR NAME="objectHideAfter"></LI>
-<LI>objectHideBefore: <TMPL_VAR NAME="objectHideBefore"></LI>
-</UL>
-<P>
-
+<ul>
+<li> <em>objectDescription:</em> <br/> <TMPL_VAR NAME="objectDescription"> </li> <p>
+<li> <em>objectHideAfter:</em> <br/> <TMPL_VAR NAME="objectHideAfter"> </li> <p>
+<li> <em>objectHideBefore:</em> <br/> <TMPL_VAR NAME="objectHideBefore"> </li> <p>
+<li> <em>objectId:</em> <br/> <TMPL_VAR NAME="objectId"> </li> <p>
+<li> <em>objectName:</em> <br/> <TMPL_VAR NAME="objectName"> </li> <p>
+<li> <em>objectStatus:</em> <br/> <TMPL_VAR NAME="objectStatus"> </li> <p>
+<li> <em>objectTags:</em> <br/> <TMPL_VAR NAME="objectTags"> </li> <p>
+<li> <em>objectType:</em> <br/> <TMPL_VAR NAME="objectType"> </li> <p>
+</ul>
