--- a/trunk/database/ui/tmpl-version.html
+++ b/trunk/database/ui/tmpl-version.html
@@ -1,3 +1,5 @@
-Software Name: <TMPL_VAR NAME="software"> <br>
-Software Revision: <TMPL_VAR NAME="revision"> <br>
-API Version: <TMPL_VAR NAME="api"> <br>
+<ul>
+<li> <em>Software:</em> <TMPL_VAR NAME="software"> </li> 
+<li> <em>Revision:</em>  <TMPL_VAR NAME="revision"> </li>
+<li> <em>API version:</em> <TMPL_VAR NAME="api"> </li>
+</ul>
