--- a/trunk/database/ui/tmpl-get-thing.html
+++ b/trunk/database/ui/tmpl-get-thing.html
@@ -1,8 +1,5 @@
 <ul>
 <TMPL_LOOP NAME=LOOP>
-<li>
-	<em><TMPL_VAR NAME="KEY">:</em><br/>
-	<TMPL_VAR NAME="VALUE"><p/>
-</li>
+<li><em><TMPL_VAR NAME="KEY">:</em> <TMPL_VAR NAME="VALUE"></li>
 </TMPL_LOOP>
 </ul>
