--- a/trunk/database/ui/tmpl-update-thing.html
+++ b/trunk/database/ui/tmpl-update-thing.html
@@ -1,6 +1,6 @@
 <H1>
-<A HREF="<TMPL_VAR NAME="LINK">"><TMPL_VAR NAME="TITLE"></A>
-<A HREF="<TMPL_VAR NAME="AUXLINK">"><TMPL_VAR NAME="AUXTITLE"></A>
+<A HREF="<TMPL_VAR NAME="LINKPAGE">"><TMPL_VAR NAME="TITLE"></A>
+<A HREF="<TMPL_VAR NAME="LINKAUX">"><TMPL_VAR NAME="AUXTITLE"></A>
 </H1>
 <p/>
 
