--- a/database/ui/tmpl-list-objects.html
+++ b/database/ui/tmpl-list-objects.html
@@ -12,8 +12,7 @@
 <A HREF="<TMPL_VAR NAME="LINKDELETE">">[delete]</A>
 </dt>
 <dd>
-name: <TMPL_VAR NAME="NAME"> <br/>
-type: <TMPL_VAR NAME="TYPE"> <br/>
+<TMPL_VAR NAME="NAME"> (<TMPL_VAR NAME="TYPE">) <br/>
 <TMPL_IF NAME="TAGS">tags: <TMPL_VAR NAME="TAGS"> <br/></TMPL_IF>
 <TMPL_IF NAME="DESCRIPTION">
 description: 
