--- a/trunk/database/ui/tmpl-list-relations.html
+++ b/trunk/database/ui/tmpl-list-relations.html
@@ -13,7 +13,7 @@
 </dt>
 <dd>
 name: <TMPL_VAR NAME="NAME"> <br/>
-description: <TMPL_VAR NAME="DESCRIPTION">
+description: <TMPL_VAR NAME="DESCRIPTION"> <br/>
 tags: <TMPL_VAR NAME="TAGS"> <br/>
 </dd>
 <p/>
