commiting status pre-purge of unused functions

--- a/database/ui/index.html
+++ b/database/ui/index.html
@@ -19,12 +19,12 @@
 </LI>
 <LI>
 <em>management:</em>
-<A HREF="version.html">[software version information]</A>
 <A HREF="show-config.html">[show configuration]</A>
 <A HREF="update-config.html">[update configuration]</A>
 </LI>
 <LI>
 <em>documentation:</em>
+<A HREF="version.html">[software version]</A>
 <A HREF="../doc/">[local]</A>
 </LI>
 </UL>
