--- a/trunk/database/ui/tmpl-status.html
+++ b/trunk/database/ui/tmpl-status.html
@@ -1,1 +1,3 @@
-action returned status <TMPL_VAR NAME="status">.
+this action returned:
+<TMPL_VAR NAME="NAME">=<TMPL_VAR NAME="STATUS">
+<A HREF="<TMPL_VAR NAME="RETURN">"><button>return</button></A>
