--- a/database/ui/tmpl-get-thing.html
+++ b/database/ui/tmpl-get-thing.html
@@ -1,5 +1,4 @@
-<ul>
 <TMPL_LOOP NAME=LOOP>
-<li><em><TMPL_VAR NAME="KEY">:</em> <TMPL_VAR NAME="VALUE"></li>
+<TMPL_VAR NAME="KEY">: <TMPL_VAR NAME="VALUE"><br/>
 </TMPL_LOOP>
-</ul>
+
