--- a/database/ui/tmpl-list-relations.html
+++ b/database/ui/tmpl-list-relations.html
@@ -12,9 +12,9 @@
 <A HREF="<TMPL_VAR NAME="LINKDELETE">"><button>delete</button></A>
 </dt>
 <dd>
-tags: <TMPL_VAR NAME="TAGS"> <br/>
-description: <TMPL_VAR NAME="DESCRIPTION"> <br/>
-id: <TMPL_VAR NAME="ID"> <br/>
+<TMPL_LOOP NAME="DUMP">
+<TMPL_VAR NAME="A">: <TMPL_VAR NAME="B"><br/>
+</TMPL_LOOP>
 </dd>
 <p/>
 </TMPL_LOOP>
