--- a/database/ui/tmpl-update-thing.html
+++ b/database/ui/tmpl-update-thing.html
@@ -3,41 +3,37 @@
 <A HREF="<TMPL_VAR NAME="LINKAUX">"><TMPL_VAR NAME="AUXTITLE"></A>
 </H1>
 <p/>
-
 <form method="post" enctype="multipart/form-data" action="<TMPL_VAR NAME="ACTION">">
 <!-- i could nest these, but frankly it makes it unreadable, so let's assume they are mutex -->
 <TMPL_LOOP NAME="LOOP">
-
 <TMPL_IF NAME="LINE3">
 <em><TMPL_VAR NAME="KEY"></em> <br/>
 <input type="text" size="10" name="<TMPL_VAR NAME="KEY">" value="<TMPL_VAR NAME="VALUE">"/> <br/>
 </TMPL_IF>
-
 <TMPL_IF NAME="LINE2">
 <em><TMPL_VAR NAME="KEY"></em> <br/>
-<input type="text" size="30" name="<TMPL_VAR NAME="KEY">" value="<TMPL_VAR NAME="VALUE">"/> <br/>
+<input type="text" size="40" name="<TMPL_VAR NAME="KEY">" value="<TMPL_VAR NAME="VALUE">"/> <br/>
 </TMPL_IF>
-
 <TMPL_IF NAME="LINE1">
 <em><TMPL_VAR NAME="KEY"></em> <br/>
-<input type="text" size="60" name="<TMPL_VAR NAME="KEY">" value="<TMPL_VAR NAME="VALUE">"/> <br/>
+<input type="text" size="80" name="<TMPL_VAR NAME="KEY">" value="<TMPL_VAR NAME="VALUE">"/> <br/>
 </TMPL_IF>
-
 <TMPL_IF NAME="BOX3">
 <em><TMPL_VAR NAME="KEY"></em> <br/>
 <textarea cols="40" rows="6" name="<TMPL_VAR NAME="KEY">" value="<TMPL_VAR NAME="VALUE">"><TMPL_VAR NAME="VALUE"></textarea> <br/>
 </TMPL_IF>
-
 <TMPL_IF NAME="BOX2">
 <em><TMPL_VAR NAME="KEY"></em> <br/>
 <textarea cols="40" rows="12" name="<TMPL_VAR NAME="KEY">" value="<TMPL_VAR NAME="VALUE">"><TMPL_VAR NAME="VALUE"></textarea> <br/>
 </TMPL_IF>
-
 <TMPL_IF NAME="BOX1">
 <em><TMPL_VAR NAME="KEY"></em> <br/>
 <textarea cols="80" rows="12" name="<TMPL_VAR NAME="KEY">" value="<TMPL_VAR NAME="VALUE">"><TMPL_VAR NAME="VALUE"></textarea> <br/>
 </TMPL_IF>
-
+<TMPL_IF NAME="UPLOAD">
+<em><TMPL_VAR NAME="KEY"></em> <br/>
+<input type="file" size="40" name="<TMPL_VAR NAME="KEY">"/>
+</TMPL_IF>
 <TMPL_IF NAME="OBJECTSTATUS">
 <em><TMPL_VAR NAME="KEY"></em> <br/>
 <input type="radio" name="<TMPL_VAR NAME="KEY">" value="draft"/ checked> draft
@@ -45,10 +41,8 @@
 <input type="radio" name="<TMPL_VAR NAME="KEY">" value="public"/> public
 <br/>
 </TMPL_IF>
-
 <p/>
 </TMPL_LOOP>
-
 <input type="submit" value="commit changes"/>
 <input type="reset" value="reset to previous"/>
 <br/>
