--- a/trunk/database/ui/index.html
+++ b/trunk/database/ui/index.html
@@ -3,27 +3,27 @@
 <h2><A NAME="welcometoprotomine" HREF="#welcometoprotomine">welcome to protomine!</a></h2>
 <UL>
 <LI>
-<em>objects:</em>
+<em>my objects:</em>
 <A HREF="list-objects.html">[list objects]</A>
 <A HREF="create-object.html">[create object]</A>
 </LI>
 <LI>
-<em>relationships:</em>
+<em>my relationships:</em>
 <A HREF="list-relations.html">[list relationships]</A>
 <A HREF="create-relation.html">[create relationships]</A>
 </LI>
 <LI>
-<em>tags:</em>
+<em>my tags:</em>
 <A HREF="list-tags.html">[list tags]</A>
 <A HREF="create-tag.html">[create tag]</A>
 </LI>
 <LI>
-<em>management:</em>
+<em>mine management:</em>
 <A HREF="show-config.html">[show configuration]</A>
 <A HREF="update-config.html">[update configuration]</A>
 </LI>
 <LI>
-<em>documentation:</em>
+<em>mine documentation:</em>
 <A HREF="version.html">[software version]</A>
 <A HREF="../doc/">[local]</A>
 </LI>
