--- a/trunk/database/ui/bits/header.html
+++ b/trunk/database/ui/bits/header.html
@@ -1,3 +1,3 @@
 <!-- begin header.html -->
-<A HREF="."><h2>homepage</h2></A><br/>
+<A HREF="."><img src="image/minelogo-75x75.png" alt="temporary logo"/></A> <br/>
 <!-- end header.html -->
