--- a/database/ui/bits/header.html
+++ b/database/ui/bits/header.html
@@ -1,3 +1,3 @@
 <!-- begin header.html -->
-<A HREF="."><img src="image/minelogo-75x75.png" alt="temporary logo"/></A> <br/>
+<A HREF="."><img src="image/mine-final-64.png" alt="mine project logo" border=0/></A> <br/>
 <!-- end header.html -->
